# esp32s3box-display-and-publish

./: .gitignore  Cargo.toml  cfg.toml  run_with_wifi_credentials.sh
.cargo/: config.toml
docs/: README.md
src/: adapter.rs  embassy_task_ili9342c.rs  main.rs
ui/: Cargo.toml
ui/src/: humidity.rs  lib.rs  pressure.rs  temperature.rs
