[package]
name = "display_sensor_data"
version = "0.1.0"
authors = ["sambenko <sam.benko@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32s3-hal", version = "0.12.0", features = ["embassy", "async", "embassy-time-timg0", "rt"] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", features = ["esp32s3", "async", "embassy-net", "embedded-svc", "wifi", "ipv6", "phy-enable-usb", "big-heap"] }
nb = "1.0.0"
embedded-io = "0.6.0"
heapless = "0.7.16"
esp-backtrace = { version = "0.8.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.6.0", features = ["esp32s3"] }
embedded-svc = { version = "0.25.0", default-features = false}

embassy-net = { version = "0.1.0", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv6", "dns"] }
embassy-executor  = { version = "0.3.0", features = ["nightly", "integrated-timers", "arch-xtensa", "executor-thread"] }
embassy-time       = { version = "=0.1.3", features = ["nightly"] }
embedded-hal-1     = { version = "=1.0.0-rc.1", package = "embedded-hal" }
embedded-hal-async = { version = "=1.0.0-rc.1" }
embedded-hal-nb    = { version = "=1.0.0-rc.1" }
embedded-can       = { version = "0.4.1" }
static_cell       = "1.1.0"

rust-mqtt = { version = "0.1.5", default-features = false, features = ["tls"]}
esp-mbedtls = { git = "https://github.com/esp-rs/esp-mbedtls.git", package = "esp-mbedtls", features = ["esp32s3", "async"]}

bme680 = "0.6.0"

display-interface-spi = "0.4"
embedded-graphics = "0.8.1"
mipidsi = "0.7.1"
ui = { path = "./ui"}

[features]
default = ["esp32s3box"]
esp32s3box = []
esp32s3box_lite = []

