[package]
name = "esp32s3box_display_and_publish"
version = "0.1.0"
authors = ["sambenko <sam.benko@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32s3-hal", version = "0.13.0", features = ["embassy", "async", "embassy-time-timg0", "rt", "embassy-executor-thread"] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", features = ["esp32s3", "async", "embassy-net", "embedded-svc", "wifi", "ipv6", "phy-enable-usb", "big-heap"] }
nb = "1.0.0"
heapless = "0.8.0"
esp-backtrace = { version = "0.9.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.7.0", features = ["esp32s3"] }
embedded-svc = { version = "0.26.2", default-features = false }

embassy-net = { version = "0.2.1", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv6", "dns"] }
embassy-executor  = { version = "0.3.1", package = "embassy-executor", features = ["nightly", "integrated-timers", "executor-thread"] }
embassy-futures = { version = "0.1.0" }
embassy-time       = { version = "0.1.3", features = ["nightly"] }
embedded-hal-1     = { version = "=1.0.0-rc.1", package = "embedded-hal" }
embedded-hal-async = { version = "=1.0.0-rc.1" }
embedded-io-async = { version = "0.6.0" }
embedded-hal-nb    = { version = "=1.0.0-rc.1" }
embedded-can       = { version = "0.4.1" }

static_cell = { version = "2.0.0", features = ["nightly"] }

rust-mqtt = { git = "https://github.com/sambenko/rust-mqtt.git", default-features = false, features = ["tls"]}
esp-mbedtls = { git = "https://github.com/esp-rs/esp-mbedtls.git", package = "esp-mbedtls", features = ["esp32s3", "async"]}

bme680 = "0.6.0"

display-interface-spi = "0.4"
display-interface = "0.4.1"
embedded-graphics = "0.8.1"
mipidsi = "0.7.1"
esp_box_ui = {git = "https://github.com/sambenko/esp-box-ui.git"}