[package]
name = "esp32s3box_display_and_publish"
version = "0.1.0"
authors = ["sambenko <sam.benko@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32s3-hal", version = "0.15.0", features = ["embassy", "async", "embassy-time-timg0", "rt", "embassy-executor-thread"] }
esp-wifi = { version = "0.3.0", features = ["esp32s3", "async", "embassy-net", "wifi", "ipv6", "phy-enable-usb"] }
heapless = "0.8.0"
esp-backtrace = { version = "0.10.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.9.0", features = ["esp32s3"] }
embedded-svc = { version = "0.27.0", default-features = false }

embassy-net = { version = "0.4.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv6", "dns"] }
embassy-executor  = { version = "0.5.0", package = "embassy-executor", features = ["integrated-timers", "task-arena-size-81920"] }
embassy-futures = { version = "0.1.0" }
embassy-time       = { version = "0.3.0" }
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"

static_cell = { version = "2.0.0", features = ["nightly"] }

rust-mqtt = { version = "0.3.0", default-features = false, features = ["tls"]}
# esp-mbedtls = { git = "https://github.com/esp-rs/esp-mbedtls.git", package = "esp-mbedtls", features = ["esp32s3", "async"]}

bme680 = "0.6.0"

display-interface-spi = "0.4"
display-interface = "0.4"
embedded-graphics = "0.8.1"
mipidsi = "0.7.1"
esp_box_ui = {git = "https://github.com/sambenko/esp-box-ui.git", branch = "main" }

tt21100-async = "0.1.0"
critical-section   = "1.1.2"
toml-cfg = "0.1.3"